<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/bckgr_img"
        android:scaleType="centerCrop"
        android:layout_marginStart="-35dp"
        android:paddingTop="@dimen/_100sdp"
        android:src="@drawable/women"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"/>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_36sdp"
        android:layout_marginEnd="@dimen/_50sdp"
        android:layout_marginTop="@dimen/_190sdp"
        android:gravity="center_vertical"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/mainTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/dm_serif_display_regular"
            android:lineSpacingExtra="@dimen/_2sdp"
            android:textAlignment="textStart"
            android:textColor="@color/white"
            android:textSize="@dimen/_42ssp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:lineHeight="@dimen/_52ssp"
            android:text="@string/modern_aest"
            tools:background="@drawable/view_border"/>

        <LinearLayout
            android:id="@+id/linearLayoutOfButtons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_30sdp"
            android:gravity="center_horizontal"
            android:weightSum="3"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <Button
                android:id="@+id/shopWomenButton"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_46sdp"
                android:layout_marginTop="@dimen/_24sdp"
                android:textColor="@color/button_text_color"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:text="@string/shop_women"
                android:textSize="@dimen/_12ssp"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                android:textAllCaps="false"
                android:fontFamily="@font/inter_regular"
                android:letterSpacing="0.02"
                android:lineSpacingExtra="-0.02sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/shopMenButton"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_46sdp"
                android:textColor="@color/button_text_color"
                android:layout_marginTop="@dimen/_18sdp"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:text="@string/shop_men"
                android:textSize="@dimen/_12ssp"
                android:fontFamily="@font/inter_regular"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                android:textAllCaps="false"
                android:letterSpacing="0.02"
                android:lineSpacingExtra="-0.02sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/shopWomenButton" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_23sdp"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/preHrefText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter_regular"
                    android:textStyle="normal"
                    android:letterSpacing="0.02"
                    android:lineSpacingExtra="-0.02sp"
                    android:text="@string/pre_href_text"
                    android:textAlignment="textStart"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_15ssp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:background="@drawable/view_border"/>

                <TextView
                    android:id="@+id/login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_3ssp"
                    android:clickable="true"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:fontFamily="@font/proxima_nova_regular"
                    android:letterSpacing="0.02"
                    android:lineSpacingExtra="-0.02sp"
                    android:text="@string/log_in"
                    android:textAlignment="textStart"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_15ssp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:background="@drawable/view_border"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>