<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FCFCFC"
    android:orientation="vertical"
    tools:context=".ShoppingActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/headers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16sdp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/headerTextView"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_46sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:fontFamily="@font/poppins_regular"
                android:lineSpacingExtra="@dimen/_2sdp"
                android:text="@string/lets_start"
                android:textAlignment="textStart"
                android:textColor="#2B2B2B"
                android:textSize="@dimen/_34ssp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/postHeaderTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:lineSpacingExtra="@dimen/_2sdp"
                android:text="@string/fill_details"
                android:textAlignment="textStart"
                android:textColor="#7A7A7A"
                android:textSize="@dimen/_17ssp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/headerTextView"
                app:layout_constraintTop_toTopOf="parent"
                app:lineHeight="@dimen/_17sdp" />

            <TextView
                android:id="@+id/intentTextHandler"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_3sdp"
                android:fontFamily="@font/poppins_regular"
                android:lineSpacingExtra="@dimen/_2sdp"
                android:textAlignment="textStart"
                android:textColor="#7A7A7A"
                android:textSize="@dimen/_14ssp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/postHeaderTextView"
                app:layout_constraintTop_toTopOf="parent"
                app:lineHeight="@dimen/_14ssp"
                tools:text="Indent Handler" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/textInputs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_14sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:layout_marginEnd="@dimen/_18sdp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/headers"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/fullName"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/full_name"
                android:textColorHint="@color/text_field_hint"
                app:boxBackgroundColor="#F0F0F0"
                app:boxCornerRadiusBottomEnd="@dimen/_14sdp"
                app:boxCornerRadiusBottomStart="@dimen/_14sdp"
                app:boxCornerRadiusTopEnd="@dimen/_14sdp"
                app:boxCornerRadiusTopStart="@dimen/_14sdp"
                app:hintTextColor="@color/text_field_hint">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/fullNameEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_16ssp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:hint="@string/email"
                android:textColorHint="@color/text_field_hint"
                app:boxBackgroundColor="#F0F0F0"
                app:boxCornerRadiusBottomEnd="@dimen/_14sdp"
                app:boxCornerRadiusBottomStart="@dimen/_14sdp"
                app:boxCornerRadiusTopEnd="@dimen/_14sdp"
                app:boxCornerRadiusTopStart="@dimen/_14sdp"
                app:hintTextColor="@color/text_field_hint"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fullName"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/emailEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_16ssp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:hint="@string/password"
                android:textColorHint="@color/text_field_hint"
                app:boxBackgroundColor="#F0F0F0"
                app:boxCornerRadiusBottomEnd="@dimen/_14sdp"
                app:boxCornerRadiusBottomStart="@dimen/_14sdp"
                app:boxCornerRadiusTopEnd="@dimen/_14sdp"
                app:boxCornerRadiusTopStart="@dimen/_14sdp"
                app:endIconMode="password_toggle"
                app:hintTextColor="@color/text_field_hint"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/email"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passwordEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:textSize="@dimen/_16ssp" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/connectButtons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputs"
            app:layout_constraintTop_toTopOf="parent">

            <Button
                android:id="@+id/signUpButton"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_42sdp"
                android:backgroundTint="@drawable/sign_up_linear_gradient"
                android:fontFamily="@font/poppins_regular"
                android:gravity="center"
                android:letterSpacing="0.02"
                android:lineSpacingExtra="-0.02sp"
                android:text="@string/sign_up"
                android:textAllCaps="false"
                android:textColor="#F6F7FA"
                android:textFontWeight="700"
                android:textSize="@dimen/_14ssp" />

            <TextView
                android:id="@+id/orTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/poppins_regular"
                android:lineSpacingExtra="@dimen/_2sdp"
                android:text="or"
                android:textAlignment="center"
                android:textColor="#2B2B2B"
                android:textSize="@dimen/_17ssp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/signUpButton"
                app:layout_constraintTop_toTopOf="parent"
                app:lineHeight="@dimen/_26ssp" />

            <Button
                android:id="@+id/connectWithFacebook"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:backgroundTint="@color/facebook"
                android:drawableLeft="@drawable/ic_facebook_vector"
                android:fontFamily="@font/poppins_regular"
                android:letterSpacing="0.02"
                android:lineSpacingExtra="-0.02sp"
                android:text="@string/connect_with_facebook"
                android:textAllCaps="false"
                android:textColor="#F6F7FA"
                android:textSize="@dimen/_14ssp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/orTextView"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/connectWithGoogle"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:drawableLeft="@drawable/google_icon"
                android:fontFamily="@font/poppins_regular"
                android:letterSpacing="0.02"
                android:lineSpacingExtra="-0.02sp"
                android:text="@string/connect_with_google"
                android:textAllCaps="false"
                android:textColor="#2B2B2B"
                android:textSize="@dimen/_14ssp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/connectWithFacebook"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/termsOfUse"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:letterSpacing="0.02"
                android:lineSpacingExtra="-0.02sp"
                android:text="@string/terms_of_use"
                android:textAlignment="center"
                android:textColor="#2B2B2B"
                android:textSize="@dimen/_13ssp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/connectWithGoogle"
                app:layout_constraintTop_toTopOf="parent"
                app:lineHeight="@dimen/_20ssp" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>